Dockerize project